# slface

./: .color_coded  .gitignore  CMakeLists.txt  LICENSE  README.md  proj.pro  readme  resources.qrc  slface_ru_RU.ts
headers/: changeuidsalingdialog.h  initaccountsdialog.h  window.h
headers/sll/: base.h  database.h  input.h  leagues_details.h  sll.h
lib/sqlite3/: CMakeLists.txt
sources/: main.cpp  window.cpp  window.ui
sources/dialog/: changeuidsalingdialog.cpp  changeuidsalingdialog.ui  initaccountsdialog.cpp  initaccountsdialog.ui
sources/sll/: CMakeLists.txt  api_iterator.cpp  base.cpp  database.cpp  input.cpp  itemupdater.cpp  storage.cpp
